--- a/aula-09/cinema/src/app/app.component.html
+++ b/aula-09/cinema/src/app/app.component.html
@@ -1,8 +1,10 @@
 <cin-cabecalho></cin-cabecalho>
 
- <router-outlet></router-outlet>>
+ <router-outlet></router-outlet>
 
  <cin-rodape></cin-rodape>
+
+ 
 
 
       
