--- a/aula-09/cinema/src/app/menu/menu.component.html
+++ b/aula-09/cinema/src/app/menu/menu.component.html
@@ -18,6 +18,7 @@
     <div>
       <h2>Filmes mais vistos</h2>
     </div>
+    
       <div class="card-deck">
         <div class="card col-4">
           <img src="../../assets/images/terror.jpg" class="card-img-top img-fluid mx-auto" >
@@ -25,14 +26,16 @@
             <h5 class="card-title">Uma noite de crime</h5>
           </div>
         </div>
+
         <div class="card col-4">
           <img src="../../assets/images/transferir.jfif" class="card-img-top img-fluid mx-auto">
           <div class="card-body">
             <h5 class="card-title">Velozes e Furiosos 9</h5>
           </div>
         </div>
+
         <div class="card col-4">
-          <img src="../../assets/images/comedia.jfif" class="card-img-topimg-fluid mx-auto">
+          <img src="../../assets/images/transferir (1).jfif" class="card-img-topimg-fluid mx-auto">
           <div class="card-body">
             <h5 class="card-title">Minha mãe é uma peça 3</h5>
           </div>
